<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.17">
  <DUT Name="E_OpStep" Id="{ec262c74-2984-43a5-9b67-138f9035ebaf}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_OpStep :
(
	IDLE := 0,
	START := 1,
	
	(* Pump Switchbox steps *)
	PSB_OPEN_GATE_VALVE,
	PSB_OPEN_PUMP_STATION_VALVES,
	PSB_ROUGH_CHAMBER,
	PSB_TURBO_CHAMBER,
	PSB_SWITCH_TO_ION_PUMP,
	PSB_CLOSE_GATE_VALVE,
	PSB_STOP_TURBO_PUMP,
	PSB_FINISH,
	
	(* Slow Pump switchbox steps *)
	SPSB_OPEN_GATE_VALVE,
	SPSB_OPEN_PUMP_STATION_VALVES,
	SPSB_ROUGH_CHAMBER,
	SPSB_OPEN_FORELINE_VALVE,
	SPSB_TURBO_CHAMBER,
	SPSB_SWITCH_TO_ION_PUMP,
	SPSB_CLOSE_VALVES,
	SPSB_STOP_TURBO_PUMP,
	SPSB_FINISH,
	
	(* Vent Switchbox steps *)
	VSB_CLOSE_GATE_VALVE,
	VSB_CLOSE_FORELINE_VALVE,
	VSB_TURN_OFF_PUMPS,
	VSB_CLOSE_ORING_VALVE,
	VSB_VENT,
	VSB_CLOSE_VENT,
	VSB_FINISH,
	
	(* Slow Vent Switchbox steps *)
	SVSB_CLOSE_GATE_VALVE,
	SVSB_CLOSE_FORELINE_VALVE,
	SVSB_TURN_OFF_PUMPS,
	SVSB_CLOSE_ORING_VALVE,
	SVSB_VENT,
	SVSB_SLOW_VENT,
	SVSB_CLOSE_VENT,
	SVSB_FINISH,
	
	(* Vent pump station *)
	VPS_VENT,
	VPS_CLOSE_VENT,
	VPS_FINISH,
	
	(* Pump Down Transport Tube *)
	POT_WAIT_PUMP_CART,
	POT_TURN_ON_PUMP,
	POT_FINISH,
	
	(* Vent Transport Tube *)
	VOT_VENT,
	VOT_WAIT_PC,
	VOT_FINISH,
	
	(* Open Transport Tube Gate Valve *)
	OTT_OPEN_VALVE,
	OTT_RUN_PSB,
	OTT_RUN_PTT,
	
	(* Laser Transport Tube On *)
	LTT_RUN_PSB,
	LTT_RUN_PTT,
	
	(* Beam On - Switchbox Ion Pump Failure *)
	BOIP_TURN_OFF_ION_PUMP,
	BOIP_OPEN_SB_VALVE,
	BOIP_HOLD,
	BOIP_CLOSE_TRANSPORT_TUBE_VALVES,
	BOIP_CLOSE_SB_VALVE,
	BOIP_TURN_OFF_PUMPS,
	BOIP_CLOSE_PP_VALVES,
	BOIP_VENT_SB,
	
	(* Beam On - Switchbox Roughing Pump or Turbo Pump Failure *)
	BOPL_TURN_ON_ION_PUMP,
	BOPL_CLOSE_PP_VALVES,
	BOPL_TURN_OFF_PP_PUMPS,
	BOPL_HOLD,
	BOPL_CLOSE_TRANSPORT_TUBE_VALVES,
	BOPL_VENT_SB
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>